mades changes on the server.py file

--- a/templates/dojos.html
+++ b/templates/dojos.html
@@ -7,7 +7,7 @@
     <title>Dojos Route</title>
 </head>
 <body>
-    <form action='/dojos/new' method="post">
+    <form action="/dojos/new" method="post">
         Name: <input type="text" name="name">
         Email: <input type="text" name="email">
         <input type="submit" value="dojos">
