--- a/templates/dojos.html
+++ b/templates/dojos.html
@@ -7,10 +7,10 @@
     <title>Dojos Route</title>
 </head>
 <body>
-    <form action="/dojos/new" method="post">
+    <form action="/new/users" method="post">
         Name: <input type="text" name="name">
         Email: <input type="text" name="email">
-        <input type="submit" value="dojos">
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
